syntax = "proto3";

package rpc;

service Controller {
  rpc NewFunctionPod (NewFunctionPodReq) returns (NewFunctionPodResp) {}
}

message NewFunctionPodReq {
  string name = 1;
}

message NewFunctionPodResp {
  string pod_name = 1;
  string podIP = 2;
}